'common_balance_route'
